--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "devDependencies": {
+    "@types/ejs": "^3.1.0",
     "@types/node": "^14.11.2",
     "gts": "^3.1.0",
     "nodemon": "^2.0.15",
