--- a/package.json
+++ b/package.json
@@ -1,21 +1,26 @@
 {
   "name": "imagegen",
   "version": "1.0.0",
-  "main": "index.js",
-  "license": "MIT",
+  "main": "build/src/index.js",
   "devDependencies": {
+    "@trivago/prettier-plugin-sort-imports": "^3.2.0",
     "@types/ejs": "^3.1.0",
+    "@types/google-protobuf": "^3.15.5",
     "@types/node": "^14.11.2",
+    "@types/pg": "^8.6.5",
+    "grpc-tools": "^1.11.2",
     "gts": "^3.1.0",
     "nodemon": "^2.0.15",
     "ts-node": "^10.7.0",
+    "ts-protoc-gen": "^0.15.0",
+    "tsc-alias": "^1.6.4",
     "tsconfig-paths": "^3.14.0",
     "typescript": "^4.0.3"
   },
   "scripts": {
     "lint": "gts lint",
     "clean": "gts clean",
-    "build": "tsc",
+    "build": "tsc && tsc-alias -s",
     "fix": "gts fix",
     "prepare": "yarn run build",
     "pretest": "yarn run build",
@@ -23,7 +28,10 @@
     "dev": "nodemon"
   },
   "dependencies": {
+    "@grpc/grpc-js": "^1.5.9",
     "ejs": "^3.1.6",
+    "google-protobuf": "^3.20.0-rc.2",
+    "pg": "^8.7.3",
     "playwright": "^1.19.2",
     "undici": "^4.15.1"
   }
