--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@types/google-protobuf": "^3.15.5",
     "@types/node": "^14.11.2",
     "@types/pg": "^8.6.5",
+    "dotenv": "^16.0.0",
     "grpc-tools": "^1.11.2",
     "gts": "^3.1.0",
     "nodemon": "^2.0.15",
